src/static/style.scss
$primary: #333333;

@import "bootstrap/scss/bootstrap";

@import url(https://db.onlinewebfonts.com/c/2f80295984700be025edc6c17f38484d?family=AaKaiTi);
@import url(https://db.onlinewebfonts.com/c/1ee9941f1b8c128110ca4307dda59917?family=STKaiti);

:root {
  --bs-body-bg: beige;
}

$primary: darkred;

div #reader {
  font-size: x-large;
  /*padding: 50px;*/
  line-height: 1.5em;

  @media (max-width: 768px) {
    font-size: large;
  }

  ruby {
    display: inline-block;
    width: 1.2em;
    text-align: center;
  }

  ruby:hover {
    color: $primary;
  }

  ruby.highlighted {
    color: $primary;
  }

  rt {
    display: block;
    width: 100%;
    font-size: small;
    text-align: center;
    opacity: 0;
    font-family: sans-serif;
    margin-top: 0.2em;
    margin-bottom: -0.2em;
  }

  rt.visible {
    opacity: 1;
  }

  ruby:hover rt {
    opacity: 1;
  }
}

.revisionChinese {
  font-size: xxx-large;
}

.flashcard {
  text-align: center;
  font-size: 10rem;
}

.chinese {
  font-family: "Kaiti TC", "AaKaiTi", "STKaiti", cursive;
}

#chineseInput {
  font-size: large;
  width: 100%;
  field-sizing: content;
  min-height: 4rem; /* Optional: prevents default single-line height */
}

#topBar {
  display: flex;
  gap: 10px;
  margin-bottom: 20px;
  align-items: center;
  position: sticky;
  top: 0;
  z-index: 999;
  background-color: beige;
  padding-top: 48px;
}

#modeChooser {
  position: sticky;
  top: 0;
  z-index: 1000;
  background-color: beige;
}

